Updated regressions to new Persian analyzer